# libnskeyedarchiver

./: .gitignore  CMakeLists.txt  README.md  nskeyedarchiver.cpp
include/nskeyedarchiver/: base64.hpp  common.h  common.hpp  kaarray.hpp  kamap.hpp  kaobject.hpp  kastring.hpp  kavalue.hpp  nsarray.hpp  nsclass.hpp  nsclassfactory.hpp  nsclassmanager.hpp  nscoding.hpp  nsdictionary.hpp  nskeyedarchiver.hpp  nskeyedunarchiver.h  nskeyedunarchiver.hpp  nsobject.h  nsobject.hpp  nsset.hpp  nsstring.hpp  nstypes.hpp  nsvariant.hpp  scope.hpp
src/: base64.cpp  common.h  nsarray.cpp  nsclassfactory.cpp  nsclassmanager.cpp  nsdictionary.cpp  nskeyedarchiver.cpp  nskeyedunarchiver.cpp  nsset.cpp  nsstring.cpp  nstypes.cpp  nsvariant.cpp  scope.h
test/: base64_test.cpp  kaarray_test.cpp  kamap_test.cpp  kaobject_test.cpp  kastring_test.cpp  kavalue_test.cpp  nskeyedarchiver_test.cpp  nskeyedunarchiver_test.cpp
test/data/: nsarray_gpucounters.bplist  nsarray_gpuinfo.bplist  nsarray_networking.bplist  nsarray_runningprocesses.bplist  nsset_energy.bplist  setconfig.bplist  str_setconfig.bplist  uint_10.bplist
tools/: main.cpp
